fix: fixed mobile view, fixed changing background on ios devices

--- a/momentum/src/assets/scss/mixins.scss
+++ b/momentum/src/assets/scss/mixins.scss
@@ -18,12 +18,17 @@
   border-radius: 4px;
   padding: 2px 10px;
   text-transform: none;
-  word-break: break-all;
   width: 85%;
   margin: 0 auto;
   font-size: 1.75rem;
   font-weight: bold;
   @include font;
+  transition: all $transition-default;
+
+  &:hover {
+    opacity: .5;
+    text-decoration: underline;
+  }
 
   &:focus {
     box-shadow: 0 0 3px 2px $color-white;
@@ -69,13 +74,15 @@
   }
 }
 
-@mixin imageGet{
+@mixin imageGet {
   width: 4rem;
+  height: 4rem;
   margin: 0 auto;
   display: flex;
 
   @include media-sm {
     width: 2.5rem;
+    height: 2.5rem;
   }
 
   * {
